# gladstone

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  g729common.h  gstg729dec.c  gstg729dec.h  gstg729enc.c  gstg729enc.h  gstg729plugin.c
